# cpp_shortterm

./: CMakeLists.txt  library.txt  main.cpp  readme.md  userlist.txt
inc/: DoubleLinkedList.hpp
src/: aBook.cpp  book.cpp  borrow.cpp  library.cpp
